# 3d_graphics_engine

./: .gitignore  CMakeLists.txt  main.cpp
common/: common.cpp  common.h  debug.cpp  debug.h
core2d/: image.cpp  image.h
core3d/: common.cpp  common.h  directions.h  polygonmesh.cpp  polygonmesh.h  shapes.cpp  shapes.h  trianglemesh.cpp  trianglemesh.h
data/shaders/: blinn_phong_with_tbn.frag  brdf_integration.frag  brdf_integration.vert  cubemap.frag  cubemap.vert  cubemap_convolution.frag  cubemap_convolution.vert  equirectangular_map.frag  image_blur.frag  main.tesc  main.tese  main.vert  main_with_tess.vert  normal_map_generation.frag  normal_map_generation.vert  pbr_with_ibl.frag  pbr_with_ibl_with_tess.frag  pbr_with_tbn.frag  pbr_with_tbn_with_full_ibl.frag  pbr_with_tbn_with_ibl.frag  phong.frag  phong_with_normals.frag  phong_with_tbn.frag  prefilter_convolution.frag
demos/: basicdemo.cpp  basicdemo.h  common.cpp  common.h
geometry/: common.cpp  common.h  directions.h  polygonmesh.cpp  polygonmesh.h  trianglemesh.cpp  trianglemesh.h
io/: image.cpp  image.h  obj.cpp  obj.h
rendering/: camera.cpp  camera.h  window.cpp  window.h
rendering/meshes/: glcube.cpp  glcube.h  glmesh.cpp  glmesh.h  glquad.cpp  glquad.h  meshbuffer.cpp  meshbuffer.h
rendering/shaders/: glshader.cpp  glshader.h  glshaderprogram.cpp  glshaderprogram.h
rendering/textures/: environment.cpp  environment.h  glcubemap.cpp  glcubemap.h  gltexture.cpp  gltexture.h  material.cpp  material.h  rendertocubemap.cpp  rendertocubemap.h  rendertotexture.cpp  rendertotexture.h
